--- a/shipping-master/docker/shipping/Dockerfile
+++ b/shipping-master/docker/shipping/Dockerfile
@@ -1,12 +1,3 @@
 FROM ubuntu:20.04
 
-
-
-RUN apt-get update && \
-apt install -y curl && \
-apt-get install -y redis-server && \
-apt-get clean
-
-
-
-EXPOSE 6379
+RUN echo "Hello World"
